--- a/app/src/App.css
+++ b/app/src/App.css
@@ -34,3 +34,18 @@
   width: 400px;
   height: 400px;
 }
+
+tr {
+  border-top: 1px solid #c6cbd1;
+  background: #fff;
+}
+
+th,
+td {
+  padding: 6px 13px;
+  border: 1px solid #dfe2e5;
+}
+
+table tr:nth-child(2n) {
+  background: #f6f8fa;
+}
