--- a/dashboard/src/sentinel/pricing/styles/styles.scss
+++ b/dashboard/src/sentinel/pricing/styles/styles.scss
@@ -38,3 +38,15 @@
 del {
   color: $greyText
 }
+
+.early-adopters {
+  color: $greenText!important
+}
+
+.button-link {
+  color: white!important
+}
+
+.learn-link {
+  color: $greenText !important
+}
