--- a/dashboard/src/contactus/styles/styles.scss
+++ b/dashboard/src/contactus/styles/styles.scss
@@ -24,3 +24,15 @@ button {
 .form-input {
   height: 50px;
 }
+
+.hs-button {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #4CAF50;
+  padding: 10px 24px;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;
+  color: white;
+}
